--- a/course.html
+++ b/course.html
@@ -34,8 +34,56 @@
     </div><!--/.container-->
       <div class="container container-first">
         <div class="row">
-          <div class="col-xs-8">
-            <iframe width="100%" height="100%" src="www.youtube.com/embed/QH2-TGUlwu4" frameborder="0" allowfullscreen></iframe>
+          <div class="bordered col-xs-8">
+            <iframe width="100%" height="100%" src="http://www.youtube.com/embed/QH2-TGUlwu4" frameborder="0" allowfullscreen></iframe>
+            <div class="text">
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+              <h2>Расписание</h2>
+              <div class="panel panel-default">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th>Номер занятия</th>
+                        <th>Тема урока</th>
+                        <th>Время урока</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>Введение в программирование</td>
+                      <td>@mdo</td>
+                    </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>Верстка</td>
+                      <td>@fat</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="Q&A">
+                <h2>Вопросы и Ответы</h2>
+                <div class="panel panel-primary">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Что такое блок?</h3>
+                  </div>
+                  <div class="panel-body">Блок — это прямоугольный элемент, который занимает заданные размеры (по умолчанию ширина 100%, а высота — в зависимости от контента, но можно задавать через параметры height и width).
+                  </div>
+                </div>
+                <div class="panel panel-primary">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Что такое блок?</h3>
+                  </div>
+                  <div class="panel-body">Блок — это прямоугольный элемент, который занимает заданные размеры (по умолчанию ширина 100%, а высота — в зависимости от контента, но можно задавать через параметры height и width).
+                  </div>
+                </div>
+
+              
+              </div>  
+            </div>
           </div>
           <div class="col-xs-4">
             <ul class="list-group">
@@ -46,7 +94,7 @@
           </div> 
         </div>  
       </div><!--/.container-->
-    <div class="footer">
+    <div class="footer navbar-static-bottom">
       <div class="container">
         <div class="row">
            <p class="text-muted">By Abarykov Andrew for <a href="http://www.justusebrain.ru" target="_blank">Just Use Brain</a></p>
