--- a/course.html
+++ b/course.html
@@ -54,12 +54,12 @@
                     <tr>
                       <td>1</td>
                       <td>Введение в программирование</td>
-                      <td>@mdo</td>
+                      <td><span class="duration">20:00 - 22:00</span></td>
                     </tr>
                     <tr>
                       <td>2</td>
                       <td>Верстка</td>
-                      <td>@fat</td>
+                      <td><span class="duration">20:00 - 22:00</span></td>
                     </tr>
                   </tbody>
                 </table>
@@ -75,9 +75,9 @@
                 </div>
                 <div class="panel panel-primary">
                   <div class="panel-heading">
-                    <h3 class="panel-title">Что такое блок?</h3>
+                    <h3 class="panel-title">Что такое .row во фрэймворке Bootstrap?</h3>
                   </div>
-                  <div class="panel-body">Блок — это прямоугольный элемент, который занимает заданные размеры (по умолчанию ширина 100%, а высота — в зависимости от контента, но можно задавать через параметры height и width).
+                  <div class="panel-body">.row — это специальный класс для создания блока во всю ширину (обычный display: block). Но зачем он нужен? Ведь если мы добавим блок после уже использованных 12 колонок, то он будет всё равно на следующей строке.
                   </div>
                 </div>
 
