Added a link to profile

--- a/course.html
+++ b/course.html
@@ -22,7 +22,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Курсы</a></li>
             <li><a href="##" class="link-colored">О проекте</a></li>
-            <li><a href="mailto:justusebrain@theaqua.im" class="link-colored">justusebrain@theaqua.im</a></li>
+            <li><a href="http://www.justusebrain/profile.html?" class="link-colored">justusebrain@theaqua.im</a></li>
           </ul>
         </div><!-- /.collapse-->
       </div><!-- /.container-->
