--- a/course.html
+++ b/course.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	  <meta charset="UTF-8">
-	  <link rel="stylesheet" href="bootstrap-3.1.1-dist/css/bootstrap.min.css">
+	  <link rel="stylesheet" href="styles/bootstrap.min.css">
 	  <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
@@ -17,89 +17,118 @@
            <span class="icon-bar"></span>
          </button>
           <a class="navbar-brand" href="#">Just Use Brain</a>
-        </div>
+        </div><!--/.navbar header-->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-8">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Курсы</a></li>
-            <li><a href="##" class="link-colored">О проекте</a></li>
+            <li><a href="##">О проекте</a></li>
             <li><a href="http://www.justusebrain/profile.html?" class="link-colored">justusebrain@theaqua.im</a></li>
           </ul>
         </div><!-- /.collapse-->
       </div><!-- /.container-->
     </nav>
     <div class="container">
-      <div class="text-wrapper">
-        <h1>Введение в программирование</h1>
-      </div>
+        <center><h1>Введение в программирование</h1></center>
     </div><!--/.container-->
-      <div class="container container-first">
-        <div class="row">
-          <div class="bordered col-xs-8">
-            <iframe width="100%" height="100%" src="http://www.youtube.com/embed/QH2-TGUlwu4" frameborder="0" allowfullscreen></iframe>
-            <div class="text">
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
-              <h2>Расписание</h2>
-              <div class="panel panel-default">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th>Номер занятия</th>
-                        <th>Тема урока</th>
-                        <th>Время урока</th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>1</td>
-                      <td>Введение в программирование</td>
-                      <td><span class="duration">20:00 - 22:00</span></td>
-                    </tr>
-                    <tr>
-                      <td>2</td>
-                      <td>Верстка</td>
-                      <td><span class="duration">20:00 - 22:00</span></td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <div class="Q&A">
-                <h2>Вопросы и Ответы</h2>
-                <div class="panel panel-primary">
-                  <div class="panel-heading">
-                    <h3 class="panel-title">Что такое блок?</h3>
-                  </div>
-                  <div class="panel-body">Блок — это прямоугольный элемент, который занимает заданные размеры (по умолчанию ширина 100%, а высота — в зависимости от контента, но можно задавать через параметры height и width).
-                  </div>
-                </div>
-                <div class="panel panel-primary">
-                  <div class="panel-heading">
-                    <h3 class="panel-title">Что такое .row во фрэймворке Bootstrap?</h3>
-                  </div>
-                  <div class="panel-body">.row — это специальный класс для создания блока во всю ширину (обычный display: block). Но зачем он нужен? Ведь если мы добавим блок после уже использованных 12 колонок, то он будет всё равно на следующей строке.
-                  </div>
-                </div>
-
-              
-              </div>  
-            </div>
-          </div>
-          <div class="col-xs-4">
-            <ul class="list-group">
-              <li class="list-group-item"><span class="glyphicon glyphicon-user"> Евгений Родионов</span></li>
-              <li class="list-group-item"><a href="http://vk.com/justusebrain">http://vk.com/justusebrain</a></li>
-              <li class="list-group-item"><a href="http://facebook.com/justusebrain">http://facebook.com/justusebrain</a></li>
-            </ul>
-          </div> 
-        </div>  
-      </div><!--/.container-->
-    <div class="footer navbar-static-bottom">
       <div class="container">
         <div class="row">
-           <p class="text-muted">By Abarykov Andrew for <a href="http://www.justusebrain.ru" target="_blank">Just Use Brain</a></p>
-        </div>
-      </div>
-    </div><!--/.footer-->
+          <div class="col-xs-8">
+            <div class="list-group">
+              <div class="panel panel-default">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="http://www.youtube.com/embed/QH2-TGUlwu4"></iframe>
+                </div>
+                <div class="text-margined">
+                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntlabore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+                <center><h2>Расписание</h2></center>
+                <div class="panel panel-default">
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th>Номер занятия</th>
+                          <th>Тема урока</th>
+                          <th>Время урока</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>1</td>
+                        <td>Введение в программирование</td>
+                        <td><span class="duration">20:00 - 22:00</span></td>
+                      </tr>
+                      <tr>
+                        <td>2</td>
+                        <td>Верстка</td>
+                        <td><span class="duration">20:00 - 22:00</span></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div><!--/.panel-->
+                <center>
+                  <h2>Вопросы и Ответы</h2>
+                </center>
+                <div class="row">
+                  <div class="col-xs-6">
+                    <div class="panel-heading">
+                      <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                          Что такое блок?
+                        </a>
+                      </h4>
+                    </div><!--/.panel-heading-->
+                    <div id="collapseOne" class="panel-collapse collapse">
+                      <div class="panel-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat  skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                      </div><!--/.panel-body-->
+                    </div><!--/.panel collapse-->
+                  </div><!--/.col-xs-6-->
+                  <div class="col-xs-6">
+                    <div class="panel-heading">
+                      <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                          Что такое сетка?
+                        </a>
+                      </h4>
+                    </div><!--/.panel-heading-->
+                    <div id="collapseTwo" class="panel-collapse collapse">
+                      <div class="panel-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,  non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                      </div><!--/.panel-body-->
+                    </div><!--/.panel-collapse-->
+                  </div><!--/.col-xs-6-->
+                </div><!--/.row-->
+                </div><!--/.text-margin-->
+              </div><!--/.panel-->
+            </div><!--/.list-group-->
+          </div><!--/.col-xs-6-->
+          <div class="col-xs-4"><!--переделать через panel!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title"><img src="https://lh3.googleusercontent.com/--zD6VGpEcI0/AAAAAAAAAAI/AAAAAAAAACM/ezkC6GN3z_o/s46-c-k-no/photo.jpg" alt="EugenFace" class="img-circle"> Евгений Родионов
+                </h3>
+              </div><!--/.panel-heading-->
+              <div class="panel-body">
+                <div>
+                  <a href="http://vk.com/justusebrain">vk.com/justusebrain</a>
+                </div>
+                <div>
+                  <a href="http://facebook.com/justusebrain">facebook.com/justusebrain</a>
+                </div>
+              </div><!--/.panel-body-->
+            </div><!--/.panel-->
+          </div><!--/.col-xs-6--> 
+        </div><!--/.row-->
+      </div><!--/.container-->
+      <div class="footer navbar-static-bottom">
+        <div class="container">
+          <div class="row">
+            <p class="text-muted">By Abarykov Andrew for <a href="http://www.justusebrain.ru" target="_blank">Just Use Brain</a></p>
+          </div><!--/.row-->
+        </div><!--/.container-->
+      </div><!--/.footer-->
+    <script src="scripts/jquery-2.1.1.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
   </body>	
 </html>
