--- a/course.html
+++ b/course.html
@@ -32,78 +32,76 @@
     </div><!--/.container-->
       <div class="container">
         <div class="row">
-          <div class="col-xs-8">
-            <div class="list-group">
-              <div class="panel panel-default">
-                <div class="embed-responsive embed-responsive-16by9">
+          <div class="col-xs-12 сol-md-10 col-lg-8">
+            <div class="panel panel-default">
+              <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" src="http://www.youtube.com/embed/QH2-TGUlwu4"></iframe>
-                </div>
-                <div class="text-margined">
-                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntlabore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
-                <center><h2>Расписание</h2></center>
-                <div class="panel panel-default">
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th>Номер занятия</th>
-                          <th>Тема урока</th>
-                          <th>Время урока</th>
-                        </tr>
-                    </thead>
-                    <tbody>
+              </div>
+              <div class="text-margined">
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntlabore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+              <center><h2>Расписание</h2></center>
+              <div class="panel panel-default">
+                  <table class="table">
+                    <thead>
                       <tr>
-                        <td>1</td>
-                        <td>Введение в программирование</td>
-                        <td><span class="duration">20:00 - 22:00</span></td>
+                        <th>Номер занятия</th>
+                        <th>Тема урока</th>
+                        <th>Время урока</th>
                       </tr>
-                      <tr>
-                        <td>2</td>
-                        <td>Верстка</td>
-                        <td><span class="duration">20:00 - 22:00</span></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div><!--/.panel-->
-                <center>
-                  <h2>Вопросы и Ответы</h2>
-                </center>
-                <div class="row">
-                  <div class="col-xs-6">
-                    <div class="panel-heading">
-                      <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                          Что такое блок?
-                        </a>
-                      </h4>
-                    </div><!--/.panel-heading-->
-                    <div id="collapseOne" class="panel-collapse collapse">
-                      <div class="panel-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat  skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                      </div><!--/.panel-body-->
-                    </div><!--/.panel collapse-->
-                  </div><!--/.col-xs-6-->
-                  <div class="col-xs-6">
-                    <div class="panel-heading">
-                      <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                          Что такое сетка?
-                        </a>
-                      </h4>
-                    </div><!--/.panel-heading-->
-                    <div id="collapseTwo" class="panel-collapse collapse">
-                      <div class="panel-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,  non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                      </div><!--/.panel-body-->
-                    </div><!--/.panel-collapse-->
-                  </div><!--/.col-xs-6-->
-                </div><!--/.row-->
-                </div><!--/.text-margin-->
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>Введение в программирование</td>
+                      <td><span class="duration">20:00 - 22:00</span></td>
+                    </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>Верстка</td>
+                      <td><span class="duration">20:00 - 22:00</span></td>
+                    </tr>
+                  </tbody>
+                </table>
               </div><!--/.panel-->
-            </div><!--/.list-group-->
+              <center>
+                <h2>Вопросы и Ответы</h2>
+              </center>
+              <div class="row">
+                <div class="col-xs-6">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                        Что такое блок?
+                      </a>
+                    </h4>
+                  </div><!--/.panel-heading-->
+                  <div id="collapseOne" class="panel-collapse collapse">
+                    <div class="panel-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat  skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div><!--/.panel-body-->
+                  </div><!--/.panel collapse-->
+                </div><!--/.col-xs-6-->
+                <div class="col-xs-6">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                        Что такое сетка?
+                      </a>
+                    </h4>
+                  </div><!--/.panel-heading-->
+                  <div id="collapseTwo" class="panel-collapse collapse">
+                    <div class="panel-body">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,  non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    </div><!--/.panel-body-->
+                  </div><!--/.panel-collapse-->
+                </div><!--/.col-xs-6-->
+              </div><!--/.row-->
+              </div><!--/.text-margin-->
+            </div><!--/.panel-->
           </div><!--/.col-xs-6-->
-          <div class="col-xs-4"><!--переделать через panel!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+          <div class="col-xs-12 col-lg-4">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title"><img src="https://lh3.googleusercontent.com/--zD6VGpEcI0/AAAAAAAAAAI/AAAAAAAAACM/ezkC6GN3z_o/s46-c-k-no/photo.jpg" alt="EugenFace" class="img-circle"> Евгений Родионов
@@ -118,7 +116,7 @@
                 </div>
               </div><!--/.panel-body-->
             </div><!--/.panel-->
-          </div><!--/.col-xs-6--> 
+          </div><!--/.col-xs-12 col-md-2 col-lg-4--> 
         </div><!--/.row-->
       </div><!--/.container-->
       <div class="footer navbar-static-bottom">
