--- a/course.html
+++ b/course.html
@@ -3,30 +3,31 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	  <meta charset="UTF-8">
-	  <link rel="stylesheet" href="styles/bootstrap.min.css">
+	  <link rel="stylesheet" href="styles/bootstrap_min.css">
 	  <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-  	<nav class="navbar navbar-default navbar-static-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-           <span class="sr-only">Toggle navigation</span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-         </button>
-          <a class="navbar-brand" href="#">Just Use Brain</a>
-        </div><!--/.navbar header-->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-8">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Курсы</a></li>
-            <li><a href="##">О проекте</a></li>
-            <li><a href="http://www.justusebrain/profile.html?" class="link-colored">justusebrain@theaqua.im</a></li>
-          </ul>
-        </div><!-- /.collapse-->
-      </div><!-- /.container-->
-    </nav>
+  	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<div class="container">
+<div class="navbar-header">
+<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+<span class="sr-only">Toggle navigation</span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<a class="navbar-brand" href="#">Just Use Brain</a>
+</div>
+<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+<ul class="nav navbar-nav">
+
+<li class="navbar-li active"><a href="#">Курсы</a></li>
+<li class="navbar-li"><a href="#">О проекте</a></li>
+<li class="navbar-li mail"><a href="#">justusebrain@theaqua.im</a></li>
+</ul>
+</div>
+</div>
+</nav>
     <div class="container">
         <center><h1>Введение в программирование</h1></center>
     </div><!--/.container-->
