--- a/course.html
+++ b/course.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	  <meta charset="UTF-8">
 	  <link rel="stylesheet" href="styles/bootstrap_min.css">
-	  <link rel="stylesheet" href="styles/style.css">
+	  <link rel="stylesheet" href="styles/styles-course.css">
   </head>
   <body>
   	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
