--- a/course.html
+++ b/course.html
@@ -3,10 +3,11 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	  <meta charset="UTF-8">
-	  <link rel="stylesheet" href="styles/bootstrap_min.css">
+	  <link rel="stylesheet" href="styles/bootstrap.min.css">
 	  <link rel="stylesheet" href="styles/styles-course.css">
   </head>
   <body>
+    
   	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -16,11 +17,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Just Use Brain</a>
+          <a class="navbar-brand" href="index.html">Just Use Brain</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="navbar-li active"><a href="#">Курсы</a></li>
+            <li class="navbar-li"><a href="index.html">Курсы</a></li>
             <li class="navbar-li"><a href="#">О проекте</a></li>
             <li class="navbar-li mail"><a href="#">justusebrain@theaqua.im</a></li>
           </ul>
@@ -41,15 +42,17 @@
                 <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntlabore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
-              <center><h2>Расписание</h2></center>
-              <div class="panel panel-default">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th>Номер занятия</th>
-                        <th>Тема урока</th>
-                        <th>Время урока</th>
-                      </tr>
+              <center>
+                <h2>Расписание</h2>
+              </center>
+              <div class="table-responsive">
+                <table class="table table-bordered table-hover">
+                  <thead>
+                    <tr>
+                      <th>Номер занятия</th>
+                      <th>Тема урока</th>
+                      <th>Время урока</th>
+                    </tr>
                   </thead>
                   <tbody>
                     <tr>
@@ -64,38 +67,42 @@
                     </tr>
                   </tbody>
                 </table>
-              </div><!--/.panel-->
+              </div>
               <center>
                 <h2>Вопросы и Ответы</h2>
               </center>
               <div class="row">
-                <div class="col-xs-6">
-                  <div class="panel-heading">
-                    <h4 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                        Что такое блок?
-                      </a>
-                    </h4>
-                  </div><!--/.panel-heading-->
-                  <div id="collapseOne" class="panel-collapse collapse">
-                    <div class="panel-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat  skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                    </div><!--/.panel-body-->
-                  </div><!--/.panel collapse-->
+                <div class="col-xs-6 text-center">
+                  <div class="panel">
+                    <div class="panel-heading">
+                      <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                          Что такое блок?
+                        </a>
+                      </h4>
+                    </div><!--/.panel-heading-->
+                    <div id="collapseOne" class="panel-collapse collapse">
+                      <div class="panel-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat  skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                      </div><!--/.panel-body-->
+                    </div><!--/.panel collapse-->
+                  </div><!--/.panel-->
                 </div><!--/.col-xs-6-->
-                <div class="col-xs-6">
-                  <div class="panel-heading">
-                    <h4 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                        Что такое сетка?
-                      </a>
-                    </h4>
-                  </div><!--/.panel-heading-->
-                  <div id="collapseTwo" class="panel-collapse collapse">
-                    <div class="panel-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,  non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                    </div><!--/.panel-body-->
-                  </div><!--/.panel-collapse-->
+                <div class="col-xs-6 text-center">
+                  <div class="panel">
+                    <div class="panel-heading">
+                      <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                          Что такое сетка?
+                        </a>
+                      </h4>
+                    </div><!--/.panel-heading-->
+                    <div id="collapseTwo" class="panel-collapse collapse">
+                      <div class="panel-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,  non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                      </div><!--/.panel-body-->
+                    </div><!--/.panel-collapse-->
+                  </div><!--/.panel-->
                 </div><!--/.col-xs-6-->
               </div><!--/.row-->
               </div><!--/.text-margin-->
@@ -104,28 +111,23 @@
           <div class="col-xs-12 col-lg-4">
             <div class="panel panel-default">
               <div class="panel-heading">
-                <h3 class="panel-title"><img src="https://lh3.googleusercontent.com/--zD6VGpEcI0/AAAAAAAAAAI/AAAAAAAAACM/ezkC6GN3z_o/s46-c-k-no/photo.jpg" alt="EugenFace" class="img-circle"> Евгений Родионов
-                </h3>
+                <img src="https://lh3.googleusercontent.com/--zD6VGpEcI0/AAAAAAAAAAI/AAAAAAAAACM/ezkC6GN3z_o/s46-c-k-no/photo.jpg" alt="EugenFace" class="img-circle">
+                <a href="profile.html" class="panel-title list-text">
+                   Евгений Родионов
+                </a>
               </div><!--/.panel-heading-->
               <div class="panel-body">
                 <div>
-                  <a href="http://vk.com/justusebrain">vk.com/justusebrain</a>
+                    <a class="sb-link" href="http://vk.com/justusebrain">vk.com/justusebrain</a>
                 </div>
                 <div>
-                  <a href="http://facebook.com/justusebrain">facebook.com/justusebrain</a>
+                   <a class="sb-link" href="http://facebook.com/justusebrain">facebook.com/justusebrain</a>
                 </div>
               </div><!--/.panel-body-->
             </div><!--/.panel-->
           </div><!--/.col-xs-12 col-md-2 col-lg-4--> 
         </div><!--/.row-->
       </div><!--/.container-->
-      <div class="footer navbar-static-bottom">
-        <div class="container">
-          <div class="row">
-            <p class="text-muted">By Abarykov Andrew for <a href="http://www.justusebrain.ru" target="_blank">Just Use Brain</a></p>
-          </div><!--/.row-->
-        </div><!--/.container-->
-      </div><!--/.footer-->
     <script src="scripts/jquery-2.1.1.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
   </body>	
